# robo_kin

./: .gitignore  CMakeLists.txt
include/Eigen/src/Core/: MathFunctions.h  MathFunctionsImpl.h
include/Eigen/src/Core/arch/AVX512/: MathFunctions.h
include/Eigen/src/Core/arch/Default/: GenericPacketMathFunctions.h
include/Eigen/src/Core/arch/MSA/: MathFunctions.h
include/Eigen/src/Core/functors/: UnaryFunctors.h
include/Eigen/src/Core/util/: Macros.h
matlab/: iksessiondata.mat
src/: CMakeLists.txt  TX2_60.cpp  TX2_60.h  global_defines.cpp  global_defines.h  main.cpp  mathHelper.cpp  mathHelper.h  robot_fwdKin.py  test_data.cpp  test_data.h
src/robot/: TX2_60.cpp  TX2_60.h
tests/: CMakeLists.txt  kin_test.cpp
